# vigil

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  security-scan.yml
docs/: ARCHITECTURE.md  README.md
docs/manual/: index.html  index.md  manual.yaml
docs/manual/01-user-guide/: 01-getting-started.md  02-installation.md  03-quick-start.md  04-worked-examples.md
docs/manual/02-api-reference/: 01-overview.md
docs/manual/03-architecture/: 01-system-overview.md  02-data-models.md
docs/manual/04-reference/: 01-configuration.md  02-error-handling.md
docs/manual/05-appendix/: 01-glossary.md  02-faq.md  03-changelog.md
scripts/: README.md
src/gen_loop/: README.md  __init__.py  checks.py  cli.py  notifier.py  scheduler.py  server.py  store.py  templates.py
tests/: README.md  test_checks.py  test_cli.py  test_integration.py  test_notifier.py  test_scheduler.py  test_store.py
