[project]
name = "gen-loop-mcp"
version = "0.15.0"
description = "Standalone self-scheduling follow-up MCP server — no external dependencies"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Fredrik Bratten", email = "fredrik.bratten@adaptivearts.ai" },
]
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
gen-loop-mcp = "gen_loop.server:main"
gen-loop-cli = "gen_loop.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gen_loop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
ignore = ["E402"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
